; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_menu.c_setChecked.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_menu.c_setChecked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }
%struct.menuItemWindow = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32)* @setChecked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setChecked(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.menuItemWindow*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @g_hash_table_iter_init(i32* %5, i32 %14)
  br label %16

16:                                               ; preds = %19, %2
  %17 = call i64 @g_hash_table_iter_next(i32* %5, i64* %6, i64* %7)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %31

19:                                               ; preds = %16
  %20 = load i64, i64* %7, align 8
  %21 = inttoptr i64 %20 to %struct.menuItemWindow*
  store %struct.menuItemWindow* %21, %struct.menuItemWindow** %8, align 8
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @GTK_CHECK_MENU_ITEM(i64 %22)
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.menuItemWindow*, %struct.menuItemWindow** %8, align 8
  %28 = getelementptr inbounds %struct.menuItemWindow, %struct.menuItemWindow* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @singleSetChecked(i32 %23, i32 %26, i32 %29)
  br label %16

31:                                               ; preds = %16
  ret void
}

declare dso_local i32 @g_hash_table_iter_init(i32*, i32) #1

declare dso_local i64 @g_hash_table_iter_next(i32*, i64*, i64*) #1

declare dso_local i32 @singleSetChecked(i32, i32, i32) #1

declare dso_local i32 @GTK_CHECK_MENU_ITEM(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
